# FastTracker

cpp/: CMakeLists.txt
cpp/include/fasttracker/: basetrack.hpp  fasttracker.hpp  kalman_filter.hpp  linear_algebra.hpp  matching.hpp  strack.hpp
cpp/src/: basetrack.cpp  fasttracker.cpp  kalman_filter.cpp  matching.cpp  strack.cpp
